2009-05-30	Chris Johns <chrisj@rtems.org>

	* ide/ide.c: Add initialisation code to reset the IDE devices and
	to probe them and display their model numbers. Also add code to
	display the probing to aid bring up new hardware.

	* ide/idecfg.c: Add the --ide-show command to show probing type
	accessing when finding devices on the configured IDE buses.

2009-05-29	Roxana Leontie <roxana.leontie@gmail.com>

	* Makefile.am, preinstall.am: Install tty_drv.h

2009-05-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/bspgetworkarea.c: Switch from ssize_t to uintptr_t for
	bsp_get_work_area() since the work area is larger than a single
	allocatable object.

2009-05-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* console/console.c, console/inch.c, ide/ide.c: Fixed warnings.

2009-04-28	Chris Johns <chrisj@rtems.org>

	* Makefile.am: Add bspcmdline.c.
	* include/bsp.h: Add boot command line interfaces.
	* start/start.c: Save the multiboot command line. Pass the command
	line to boot_card.
	* start/start.S: Update for boot_card command line change.
	* startup/bspstart.c: Initialise the command line.
	* startup/bspcmdline.c: New.
	* console/console.c, ide/idecfg.c: Add boot command line support.
	* ide/ide.cfg: Add prints for errors to help resolve problems.

2009-02-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac, start/start16.S: Remove duplicate configure option and
	add support for the configure time variable BSP_VIDEO_80x50.

2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_specs: Move -e start from *link to *startfile to avoid warning
	for undefined entry symbol when linking relocatables with binutils
	2.19.

2008-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1344/bsps
	* clock/ckinit.c: Committed code was not final. Corrections.

2008-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>
		Michael South <msouth@msouth.org>

	PR 1344/bsps
	* configure.ac, clock/ckinit.c, timer/timer.c: Add use of TSC for